Fixed bug with tabBar z-index

--- a/index.css
+++ b/index.css
@@ -21,6 +21,7 @@ body {
   width: 100%;
   background-color: #2d2d2d;
   padding: 5px 0 5px 0;
+  z-index: 1000;
 }
 
 #tabs {
